Edited the recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,28 @@
 
     <body>
         <h1>Lasagna</h1>
+        <body>
+            
+           
+            <img src="./lasagna.jpg">
+            <h3>Good Lasagna</h3>
+            <p>
+                Cheesy and delicious beef lasagna
+            </p>
+            <h4>Ingredients</h4>
+            <ul>
+                <li>Pasta</li>
+                <li>Cheese</li>
+                <li>Sauce</li>
+                <li>Beef</li>
+                <li>Parsley</li>
+            </ul>
+            <h4>Steps</h4>
+            <ol>
+                <li>Make meal</li>
+                <li>Place in oven 425 degrees for 20 min</li>
+                <li>Serve</li>
+            </ol>
+        </body>
     </body>
 </html>
